[package]
name = "unicalendar_to_icalendar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icalendar="0.10.0"
clap="2.33.3"
chrono="0.4.19"
#http="0.2.5"
reqwest="0.11.4"
futures="0.3.17"
tokio = { version = "1", features = ["full"] }
json="0.12.4"